<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/status_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:text="@string/status_text" />

    <Button
        android:id="@+id/button_refresh"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_refresh" />

    <Button
        android:id="@+id/button_clear_timestamp"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_clear_timestamp" />

    <Button
        android:id="@+id/button_wipe_db"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_wipe_db" />

    <Button
        android:id="@+id/button_reset_url"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_reset_url" />

    <Button
        android:id="@+id/button_go_firstrun"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_go_firstrun" />

</LinearLayout>